# di-service-locator

./: .coveragerc  .env.example  .gitignore  LICENSE  Makefile  README.md  features.json  make.cmd  pyproject.toml
.circleci/: config.yml
.github/: dependabot.yml  validate-pr-title.yml
.github/workflows/: validate-dependencies-licenses.yml  validate-pr-title.yml
di_service_locator/: __init__.py  config.py  definitions.py  exceptions.py  features.py  files.py  instantiator.py
di_service_locator/feature_defs/: blob_storage.py  instrumentation.py  interfaces.py
di_service_locator/feature_defs/aws/: blob_storage.py
di_service_locator/feature_defs/gcp/: __init__.py  blob_storage.py
di_service_locator/utils/: helpers.py  transcoding.py
docker/: Dev.Dockerfile  docker-compose.yml
tests/: conftest.py  test_config.py  test_features.json  test_features.py
tests/feature_defs/: test_blobstorage.py  test_instrumentation.py
tests/feature_defs/aws/: test_blob_storage.py
tests/feature_defs/gcp/: test_blob_storage.py
tests/utils/: test_transcoding.py
